--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/react": "^4.2.3",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@prisma/client": "^6.5.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "antd": "^5.24.6",
